--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="label_hint_hour">Hora</string>
     <string name="label_cancel">Cancelar</string>
     <string name="label_tasks">Tarefas</string>
+    <string name="label_description_new_task">Nova tarefa</string>
 </resources>
