--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TO DO</string>
+    <string name="app_name">ToDO</string>
     <string name="lable_new_task">Criar Tarefa</string>
     <string name="label_hint_title">Título</string>
     <string name="label_hint_description">Descrição</string>
